# LIDAR_YE

./: .gitignore  README.md  coordinates.txt  eightracing.sh  success.sh
.catkin_tools/profiles/default/: devel_collisions.txt
analyse/: massif.out  massif.out.71748  massif.out.71751  massif.out.71752  massif.out.71755  massif.out.71757  massif.out.71764  massif.out.71766  massif.out.71768  massif.out.71770  massif.out.71783  massif.out.71790  massif.out.71793  massif.out.71795  massif.out.71802  massif.out.71804  massif.out.71808  massif.out.71812
src/Local_cone/: CMakeLists.txt  package.xml
src/Local_cone/src/: main.cpp
src/car_position/launch/: car_position.launch
src/car_position/src/: CarState.cpp  main.cpp
src/common_msgs/: CMakeLists.txt
src/common_msgs/msg/: Cone.msg
src/control/: CMakeLists.txt  package.xml
src/control/launch/: control.launch
src/control/src/: PP_car.cpp  newcontral.cpp  oldcontral.cpp
src/huat_msgs/: CMakeLists.txt
src/huat_msgs/msg/: HUAT_ASENSING.msg
src/lidar_cluster/config/: lidar_cluster.rviz  lidar_cluster.yaml
src/lidar_cluster/include/: distortion_adjust.hpp  utility.h
src/lidar_cluster/launch/: 1  acceleration.launch  lida_cluster.launch  lidar_cluster.launch
src/lidar_cluster/rviz_cfg/: lidar_cluster_c.rviz
src/lidar_cluster/src/: distortion_adjust.cpp  ground_segmentation.cpp  imu_subscriber.cpp  lidar_cluster.cpp  lidar_cluster_nodelet.cc  utility.cpp  visulization_marker.cpp
src/linear_acc/: CMakeLists.txt  nodelet_linear_acc.xml
src/linear_acc/config/: linear_acc.yaml
src/linear_acc/include/: linear_acc.hpp
src/linear_acc/launch/: linear_acc.launch
src/linear_acc/src/: linear_acc.cpp  linear_acc_nodelet.cc
src/nodelet_test/: CMakeLists.txt  nodelet_plugins.xml  package.xml
src/nodelet_test/include/: sample_nodelet.h
src/nodelet_test/launch/: nodelet_test.launch
src/nodelet_test/src/: sample_nodelet.cpp
src/parameters/: extrinsic.txt
src/topic_sub_test/: CMakeLists.txt
src/topic_sub_test/msg/: ASENSING.msg  CarState.msg  CarStateDt.msg  Cone.msg  Isarrive.msg
src/topic_sub_test/src/: cone_sub.cpp
src/topic_sub_test/txt/: conedata.txt
